--- a/docs/README.Rmd
+++ b/docs/README.Rmd
@@ -334,11 +334,11 @@ compare_mvgams(lynx_mvgam, lynx_mvgam_poor, fc_horizon = 10)
 
 Summary statistics of the two models' out of sample Discrete Rank Probability Score (DRPS) indicate that the well-specified model performs markedly better (lower DRPS) across most out of sample horizons.
 
-The second approximator uses more conventional leave-future-out comparisons. Time series models are often evaluated using an expanding window training technique, where the model is initially trained on some subset of data from `t = 1` to `t = n_train`, and then is used to produce forecasts for the next `fc_horizon` time steps `t = n_train + fc_horizon`. In the next iteration, the size of training data is expanded by a single time point and the process repeated. This is obviously computationally challenging for Bayesian time series models, as the number of refits can be very large. `mvgam` uses an approximation based on Pareto-smoothed importance sampling. Briefly, we refit the model using the first `min_t` observations to perform a single exact `fc_horizon`-ahead forecast step. This forecast is evaluated against the `min_t + fc_horizon` out of sample observations using the Expected Log Predictive Density (ELPD). Next, we approximate each successive round of expanding window forecasts by moving forward one step at a time `for i in 1:N_evaluations` and re-weighting draws from the model's posterior predictive distribution using Pareto Smoothed Importance Sampling (PSIS). In each iteration `i`, PSIS weights are obtained for the next observation that would have been included in the model if we had re-fit (the last observation that would have been in the training data, or `min_t + i`). If these importance ratios are stable, we consider the approximation adequate and use the re-weighted posterior's forecast for evaluating the next holdout set of testing observations (`(min_t + i + 1):(min_t + i + fc_horizon)`). This is similar to the process of particle filtering to update forecasts in light of new data by reweighting the posterior draws using importance weights. But at some point the importance ratio variability will become too large and importance sampling will be unreliable. This is indicated by the estimated shape parameter `k` of the generalized Pareto distribution crossing a certain threshold `pareto_k_threshold`. Only then do we refit the model using all of the observations up to the time of the failure. We then restart the process and iterate forward until the next refit is triggered. The process is computationally much more efficient, as only a fraction of the evaluations typically requires refits (the algorithm is  described in detail by Bürkner et al. 2020).
+The second approximator uses more conventional leave-future-out comparisons. Time series models are often evaluated using an expanding window training technique, where the model is initially trained on some subset of data from `t = 1` to `t = n_train`, and then is used to produce forecasts for the next `fc_horizon` time steps `t = n_train + fc_horizon`. In the next iteration, the size of training data is expanded by a single time point and the process repeated. This is obviously computationally challenging for Bayesian time series models, as the number of refits can be very large. `mvgam` uses an approximation based on importance sampling. Briefly, we refit the model using the first `min_t` observations to perform a single exact `fc_horizon`-ahead forecast step. This forecast is evaluated against the `min_t + fc_horizon` out of sample observations using the Expected Log Predictive Density (ELPD). Next, we approximate each successive round of expanding window forecasts by moving forward one step at a time `for i in 1:N_evaluations` and re-weighting draws from the model's posterior predictive distribution using Pareto Smoothed Importance Sampling (PSIS). In each iteration `i`, PSIS weights are obtained for all observations that would have been included in the model if we had re-fit. If these importance ratios are stable, we consider the approximation adequate and use the re-weighted posterior's forecast for evaluating the next holdout set of testing observations (`(min_t + i + 1):(min_t + i + fc_horizon)`). This is similar to the process of particle filtering to update forecasts in light of new data by re-weighting the posterior draws using importance weights. But at some point the importance ratio variability will become too large and importance sampling will be unreliable. This is indicated by the estimated shape parameter `k` of the generalized Pareto distribution crossing a certain threshold `pareto_k_threshold`. Only then do we refit the model using all of the observations up to the time of the failure. We then restart the process and iterate forward until the next refit is triggered. The process is computationally much more efficient, as only a fraction of the evaluations typically requires refits (the algorithm is  described in detail by Bürkner et al. 2020).
 
 Paul-Christian Bürkner, Jonah Gabry & Aki Vehtari (2020). Approximate leave-future-out cross-validation for Bayesian time series models. Journal of Statistical Computation and Simulation. 90:14, 2499-2523.
 
-For this example, we set simulate a single count-valued time series of length `T = 60`, using a latent `AR1` trend and a cyclic seasonal pattern. Two models are fit as before, the first is a complex but more correct model, while the second is simpler and mis-specified. We then run approximate leave-future-out cross-validation, setting `min_t = 36` so that the first refit uses all observations from `t = 1` to `t = 36`. This is done for both models so that we can compare approximate ELPD values when forecasting two time steps ahead (`fc_horizon = 2`)
+For this example, we simulate a single count-valued time series of length `T = 60`, using a latent `AR1` trend and a cyclic seasonal pattern. Two models are fit as before, the first is a complex but more correct model, while the second is simpler and mis-specified. We then run approximate leave-future-out cross-validation, setting `min_t = 36` so that the first refit uses all observations from `t = 1` to `t = 36`. This is done for both models so that we can compare approximate ELPD values when forecasting two time steps ahead (`fc_horizon = 2`)
 ```{r, eval=FALSE}
 set.seed(12345)
 simdat <- sim_mvgam(T = 60, train_prop = 1, n_series = 1,
@@ -378,11 +378,11 @@ lfo_poor <- lfo_cv(poor, min_t = 36,
 ```
 
 The `S3` plotting function for these `lfo_cv` objects will show the Pareto-k values and ELPD values over the evaluation time points. For the Pareto-k plot, a dashed red line indicates the specified threshold chosen for triggering model refits. For the ELPD plot, a dashed red line indicated the bottom 10% quantile of ELPD values. Points below this threshold may represent outliers that were more difficult to forecast
-```{r}
+```{r, fig.width=6.5, fig.height=7.5, dpi=160}
 plot(lfo_good)
 ```
 
-```{r}
+```{r, fig.width=6.5, fig.height=7.5, dpi=160}
 plot(lfo_poor)
 ```
 
@@ -398,7 +398,7 @@ lfo_good$sum_ELPD
 lfo_poor$sum_ELPD
 ```
 
-As before, these metrics all favour the more complex model over the simpler "poor" model. This gives us confidence that the more complex model will perform better in future forecasting exercises.
+As before, these metrics all favour the more complex model over the simpler "poor" model. This gives us confidence that the more complex model will perform better in future forecasting exercises. The first approximator is faster as it does not require refits, but caution is needed as the state of the latent trend at the evaluation time point has already been informed by both the past and future observations. The second approximator, using PSIS for approximate leave-future-out, should be preferred when compuationally accessible.
 
 ## Extended observation families
 `mvgam` was originally designed to analyse and forecast non-negative integer-valued data (counts). These data are traditionally challenging to analyse with existing time-series analysis packages. But further development of `mvgam` has resulted in support for a growing number of observation families that extend to other types of data. Currently, the package can handle data for the following families:  
