--- a/index.Rmd
+++ b/index.Rmd
@@ -16,6 +16,7 @@ Install the development version from `GitHub` using:
 * `gaussian()` for real-valued data 
 * `student_t()` for heavy-tailed real-valued data
 * `lognormal()` for non-negative real-valued data
+* `Gamma()` for non-negative real-valued data
 * `betar()` for proportional data on `(0,1)`
 * `poisson()` for count data
 * `nb()` for overdispersed count data
